@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: nfs_start.c,v 1.15 2002/06/23 01:05:38 ib42 Exp $
+ * $Id: nfs_start.c,v 1.16 2002/06/23 01:46:59 ezk Exp $
  *
  */
 
@@ -357,9 +357,12 @@ mount_automounter(int ppid)
   ret = create_nfs_service(&soNFS, &nfs_port, &nfsxprt, nfs_program_2);
   if (ret != 0)
     return ret;
-  ret = create_amq_service(&udp_soAMQ, &udp_amqp, &udp_amqncp, &tcp_soAMQ, &tcp_amqp, &tcp_amqncp);
-  if (ret != 0)
-    return ret;
+  /* security: if user sets -D noamq, don't even create listening socket */
+  amuDebug(D_AMQ) {
+    ret = create_amq_service(&udp_soAMQ, &udp_amqp, &udp_amqncp, &tcp_soAMQ, &tcp_amqp, &tcp_amqncp);
+    if (ret != 0)
+      return ret;
+  }
 
 #ifdef HAVE_FS_AUTOFS
   if (amd_use_autofs) {
