@@ -1,3 +1,9 @@
+2002-06-22  Erez Zadok  <ezk@whitestar.dyn.optonline.net>
+
+	* amd/nfs_start.c (mount_automounter): Security fix.  if user sets
+	-D noamq, don't even create listening socket.  Suggestion by Ed
+	Ravin <eravin@panix.com>.
+
 2002-06-22  Ion Badulescu  <lionut@gonzales.badula.org>
 
 	* hlfsd/homedir.c (homedir): use setgid() instead of setegid()
